# mirror

./: .travis.yml  CMakeLists.txt  README.md
cpp_mirror/headers/: primitive_type.hpp  type_descriptor.hpp  type_descriptor_manager.hpp
cpp_mirror/sources/: main.cpp
include/: error_handler.hpp  type_descriptor.hpp  type_descriptor_for_class.hpp  type_descriptor_for_enum.hpp  type_descriptor_for_primitive.hpp
mirror/headers/: function_traits.hpp  mirror.h  primitive_type.hpp  string_converter.hpp  type_descriptor.hpp  type_descriptor_for_class.hpp  type_descriptor_for_enum.hpp  type_descriptor_for_function.hpp  type_descriptor_for_primitive.hpp  type_descriptor_manager.hpp  type_descriptor_resolver.hpp
mirror/sources/: main.cpp
src/: main.cpp
tests/: test_primitive.cpp
